--- a/test/list/_empty.sass
+++ b/test/list/_empty.sass
@@ -103,33 +103,113 @@
 		@include true.assert-true($assert, '[true,slash]')
 
 	@include true.it('Creates a comma-separated, unbracketed list from a source list')
-		$result: src.empty((a, b))
+		$result: src.empty($list: (a, b))
 		$assert: list.separator($result) == comma and not list.is-bracketed($result)
 		@include true.assert-true($assert)
 
 	@include true.it('Creates a comma-separated, bracketed list from a source list')
-		$result: src.empty([a, b])
+		$result: src.empty($list: [a, b])
 		$assert: list.separator($result) == comma and list.is-bracketed($result)
 		@include true.assert-true($assert)
 
 	@include true.it('Creates a space-separated, unbracketed list from a source list')
-		$result: src.empty(a b)
+		$result: src.empty($list: a b)
 		$assert: list.separator($result) == space and not list.is-bracketed($result)
 		@include true.assert-true($assert)
 
 	@include true.it('Creates a space-separated, bracketed list from a source list')
-		$result: src.empty([a b])
+		$result: src.empty($list: [a b])
 		$assert: list.separator($result) == space and list.is-bracketed($result)
 		@include true.assert-true($assert)
 
 	@include true.it('Creates a slash-separated, unbracketed list from a source list')
 		$list: list.slash(a, b)
-		$result: src.empty($list)
+		$result: src.empty($list: $list)
 		$assert: list.separator($result) == slash and not list.is-bracketed($result)
 		@include true.assert-true($assert)
 
 	@include true.it('Creates a slash-separated, bracketed list from a source list')
 		$list: list.join(list.slash(a, b), [], $bracketed: true)
-		$result: src.empty($list)
+		$result: src.empty($list: $list)
 		$assert: list.separator($result) == slash and list.is-bracketed($result)
 		@include true.assert-true($assert, '[slash,true]')
+
+	@include true.it('Creates a comma-separated, unbracketed list co-oping source list')
+		$result: src.empty($list: [a, b], $bracketed: false)
+		$assert: list.separator($result) == comma and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty($list: a b, $separator: comma)
+		$assert: list.separator($result) == comma and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty(comma, false, [a b])
+		$assert: list.separator($result) == comma and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+	@include true.it('Creates a comma-separated, bracketed list co-oping source list')
+		$result: src.empty($list: (a, b), $bracketed: true)
+		$assert: list.separator($result) == comma and list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty($list: [a b], $separator: comma)
+		$assert: list.separator($result) == comma and list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty(comma, true, a b)
+		$assert: list.separator($result) == comma and list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+	@include true.it('Creates a space-separated, unbracketed list co-oping source list')
+		$result: src.empty($list: [a b], $bracketed: false)
+		$assert: list.separator($result) == space and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty($list: (a, b), $separator: space)
+		$assert: list.separator($result) == space and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty(space, false, [a, b])
+		$assert: list.separator($result) == space and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+	@include true.it('Creates a space-separated, bracketed list co-oping source list')
+		$result: src.empty($list: a b, $bracketed: true)
+		$assert: list.separator($result) == space and list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty($list: [a, b], $separator: space)
+		$assert: list.separator($result) == space and list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty(space, true, (a, b))
+		$assert: list.separator($result) == space and list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+	@include true.it('Creates a slash-separated, unbracketed list co-oping source list')
+		$list: list.slash(a, b)
+		$result: src.empty($list: $list, $bracketed: false)
+		$assert: list.separator($result) == slash and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty($list: (a, c), $separator: slash)
+		$assert: list.separator($result) == slash and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty(slash, false, [a b])
+		$assert: list.separator($result) == slash and not list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+	@include true.it('Creates a slash-separated, bracketed list co-oping source list')
+		$list: list.slash(a, b)
+		$result: src.empty($list: $list, $bracketed: true)
+		$assert: list.separator($result) == slash and list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty($list: [a, c], $separator: slash)
+		$assert: list.separator($result) == slash and list.is-bracketed($result)
+		@include true.assert-true($assert)
+
+		$result: src.empty(slash, true, a b)
+		$assert: list.separator($result) == slash and list.is-bracketed($result)
+		@include true.assert-true($assert)
