--- a/src/list/_concat.sass
+++ b/src/list/_concat.sass
@@ -6,6 +6,7 @@
 ////
 
 @use 'sass:list'
+@use 'empty'
 @use '../internal'
 
 
@@ -21,10 +22,10 @@
 /// @throw The beginning index is not less than the length of the list.
 ///
 /// @access public
+/// @require empty.empty
 /// @require internal.$exception-function
 /// @require internal.exception-param
 /// @require internal.exception-separator
-/// @require internal.init
 /// @require internal.param-get
 /// @require internal.param-separator-is-invalid
 ///
@@ -40,9 +41,9 @@
 	@if list.length($values) < 2
 		@error internal.exception-param('Two or more values are required', 'values')
 
-	$result: internal.init(list.nth($values, 1))
+	$result: empty.empty($separator, $bracketed, list.nth($values, 1))
 
 	@each $value in $values
-		$result: list.join($result, $value, $separator, $bracketed)
+		$result: list.join($result, $value)
 
 	@return $result
