--- a/src/list/_empty.sass
+++ b/src/list/_empty.sass
@@ -7,26 +7,27 @@
 
 @use 'sass:list'
 @use 'sass:meta'
-@use '../internal'
+@use '../internal/exception'
+@use '../internal/param'
 
 
 ///
 /// Creates an empty list with the specified characteristics or the characteristics of the specified list.
 ///
-/// @param {List} $list [null] - The list from which to determine separator and bracket style.
 /// @param {String} $separator [comma] - The type of separator to be used by the empty list.
 /// @param {Boolean} $bracketed [false] - Whether the empty list has square brackets or no brackets.
+/// @param {List} $list [null] - The list from which to determine separator and bracket style.
 /// @return {List}
 ///
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.$exception-function
-/// @require internal.param-separator-is-invalid
-/// @require internal.exception-separator
+/// @require exception.$function
+/// @require exception.separator
+/// @require param.separator-is-invalid
 ///
 @function empty($separator: null, $bracketed: null, $list: null)
-	internal.$exception-function: 'empty'
+	exception.$function: 'empty'
 
 	@if meta.type-of($list) == 'list'
 		@if $separator == auto or $separator == null
@@ -42,7 +43,7 @@
 		@if $bracketed == null
 			$bracketed: false
 
-	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+	@if param.separator-is-invalid($separator)
+		@error exception.separator()
 
 	@return list.join((), (), $separator, $bracketed)
