--- a/test/index.sass
+++ b/test/index.sass
@@ -6,6 +6,13 @@
 ////
 
 
+// Required by 'src/list/concat'
+// Required by 'src/list/filter'
+// Required by 'src/list/flat'
+// Required by 'src/list/insert-nth'
+// Required by 'src/list/slice'
+// Required by 'src/list/sort'
+@use 'list/empty'
 // Required by 'src/internal/exception'
 // Required by 'src/list/to-string'
 @use 'list/join'
@@ -24,7 +31,6 @@
 @use 'list/remove-nth'
 @use 'list/concat'
 @use 'list/distinct'
-@use 'list/empty'
 @use 'list/every'
 @use 'list/find-nth'
 @use 'list/flat'
