--- a/src/list/_insert-nth.sass
+++ b/src/list/_insert-nth.sass
@@ -16,18 +16,22 @@
 /// @param {List} $list - The list to which the value is to be inserted.
 /// @param {Number} $index - The index at which the value is to be inserted. A negative index can be used, indicating an offset from the end of the list.
 /// @param {*} $value - The value which is to be inserted.
+/// @param {String} $separator [auto] - The type of separator to be used by the copied list.
 /// @return {List}
 ///
 /// @throw `#{$index}` is not a number.
 /// @throw List index may not be 0.
 /// @throw Invalid index #{$index} for a list with #{$length} elements.
+/// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
 /// @require internal.$exception-function
+/// @require internal.exception-separator
+/// @require internal.param-separator-is-invalid
 /// @require internal.param-validate-index
 /// @require internal.insert-nth
 ///
-@function insert-nth($list, $index, $value)
+@function insert-nth($list, $index, $value, $separator: auto)
 	internal.$exception-function: 'insert-nth'
 
 	$index: internal.param-validate-index('index', $index, list.length($list))
@@ -35,6 +39,9 @@
 	@if meta.type-of($index) != 'number'
 		@error $index
 
-	@return internal.insert-nth($list, $index, $value)
+	@if internal.param-separator-is-invalid($separator)
+		@error internal.exception-separator()
+
+	@return internal.insert-nth($list, $index, $value, $separator)
 
 
