--- a/src/list/_remove.sass
+++ b/src/list/_remove.sass
@@ -7,6 +7,7 @@
 
 @use 'sass:list'
 @use 'remove-nth'
+@use '../internal'
 
 
 ///
@@ -14,17 +15,25 @@
 ///
 /// @param {List} $list - The list to which the value is to be removed.
 /// @param {Number} $value - The value to be removed.
+/// @param {String} $separator [auto] - The type of separator to be used by the copied list.
 /// @return {List}
 ///
 /// @access public
+/// @require internal.$exception-function
+/// @require internal.exception-separator
+/// @require internal.param-separator-is-invalid
 /// @require remove-nth.remove-nth
 ///
-@function remove($list, $value)
+@function remove($list, $value, $separator: auto)
+	internal.$exception-function: 'remove'
+
+	@if internal.param-separator-is-invalid($separator)
+		@error internal.exception-separator()
 
 	$index: list.index($list, $value)
 
 	@while $index
-		$list: remove-nth.remove-nth($list, $index)
+		$list: remove-nth.remove-nth($list, $index, $separator)
 		$index: list.index($list, $value)
 
 	@return $list
