--- a/src/list/_replace.sass
+++ b/src/list/_replace.sass
@@ -8,20 +8,32 @@
 @use 'sass:list'
 @use 'sass:meta'
 @use 'map'
+@use '../internal'
 
 
 ///
 /// Reverses a list in place. The first item becomes the last, and the last item becomes the first.
 ///
 /// @param {List} $list - The list to reverse.
+/// @param {String} $separator [auto] - The type of separator to be used by the copied list.
 /// @return {List}
+///
+/// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
 /// @require _replace-transformer
+/// @require internal.$exception-function
+/// @require internal.exception-separator
+/// @require internal.param-separator-is-invalid
 /// @require map.map
 ///
-@function replace($list, $value, $replacement)
-	@return map.map($list, meta.get-function('_replace-transformer'), $value, $replacement)
+@function replace($list, $value, $replacement, $separator: auto)
+	internal.$exception-function: 'replace'
+
+	@if internal.param-separator-is-invalid($separator)
+		@error internal.exception-separator()
+
+	@return map.map($list, meta.get-function('_replace-transformer'), $separator, $value, $replacement)
 
 
 ///
