--- a/test/list/_insert-nth.sass
+++ b/test/list/_insert-nth.sass
@@ -26,3 +26,8 @@
 		$assert: src.insert-nth($list, 3, (1 2 3))
 		$expected: ['ant', 'bison', (1 2 3), 'camel', 'duck', 'elephant']
 		@include true.assert-equal($assert, $expected)
+
+	@include true.it('Return a list with a different separator')
+		$assert: src.insert-nth($list, 2, 'deer', $separator: space)
+		$expected: ['ant' 'deer' 'bison' 'camel' 'duck' 'elephant']
+		@include true.assert-equal($assert, $expected)
