Fixes `.replace()` docs

--- a/src/list/_remove.sass
+++ b/src/list/_remove.sass
@@ -13,7 +13,7 @@
 ///
 /// Returns a copy of a list without the specified value.
 ///
-/// @param {List} $list - The list to which the value is to be removed.
+/// @param {List} $list - The list from which the value is to be removed.
 /// @param {Number} $value - The value to be removed.
 /// @param {String} $separator [auto] - The type of separator to be used by the copied list.
 /// @return {List}
