Add `$separator` to native `list.set-nth()`

--- a/src/index.sass
+++ b/src/index.sass
@@ -27,6 +27,7 @@
 @forward 'list/remove'
 @forward 'list/replace'
 @forward 'list/reverse'
+@forward 'list/set-nth'
 @forward 'list/slice'
 @forward 'list/some'
 @forward 'list/sort'
