--- a/src/list/_replace.sass
+++ b/src/list/_replace.sass
@@ -11,7 +11,7 @@
 
 
 ///
-/// Returns a copy of a list with all occurrences of the specified value replaced by the specified replacement.
+/// Returns a copy of a list with all occurrences of the given value replaced by the specified replacement.
 ///
 /// @param {List} $list - The list from which the value is to be replaced.
 /// @param {*} $value - The value to be replace by the replacement.
