--- a/test/index.sass
+++ b/test/index.sass
@@ -43,6 +43,7 @@
 @use 'list/remove'
 @use 'list/replace'
 @use 'list/reverse'
+@use 'list/set-nth'
 @use 'list/some'
 @use 'list/sort'
 @use 'list/to-string'
