--- a/src/list/_map.sass
+++ b/src/list/_map.sass
@@ -17,6 +17,7 @@
 /// @param {List} $list - The list from which items will be processed.
 /// @param {Function} $transformer - The transform function to apply to each item. The first parameter is the current item being processed in the list. The second parameter is the index of the current item being processed in the list. The third parameter is the list being processed. The returned value may be any type.
 /// @param {String} $separator [auto] - The type of separator to be used by the new list.
+/// @param {Boolean | String} $bracketed [auto] - Whether the new list has square brackets or no brackets.
 /// @param {ArgList} $args - Additional parameters which are provided to transform function.
 /// @return {List}
 ///
@@ -29,7 +30,7 @@
 /// @require internal.exception-type
 /// @require internal.param-separator-is-invalid
 ///
-@function map($list, $transformer, $separator: auto, $args...)
+@function map($list, $transformer, $separator: auto, $bracketed: auto, $args...)
 	internal.$exception-function: 'map'
 
 	@if meta.type-of($transformer) != 'function'
@@ -38,7 +39,7 @@
 	@if internal.param-separator-is-invalid($separator)
 		@error internal.exception-separator()
 
-	$result: empty.empty($separator, $list: $list)
+	$result: empty.empty($separator, $bracketed, $list)
 	$index: 1
 
 	@each $item in $list
